@@ -124,7 +124,6 @@ Global
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET 1.1.ActiveCfg = Debug|Any CPU
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET 1.1 (Mono Libraries).ActiveCfg = Debug|Any CPU
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET 2.0.ActiveCfg = Debug|Any CPU
-		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET 2.0.Build.0 = Debug|Any CPU
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET 2.0 (Mono Libraries).ActiveCfg = Debug|Any CPU
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET CF 1.0 (Pocket PC 2003).ActiveCfg = Debug|Any CPU
 		{C28B1166-1380-445D-AEC1-8A18B990DD18}.Debug|.NET CF 1.0 (Smartphone 2003).ActiveCfg = Debug|Any CPU
@@ -375,7 +374,6 @@ Global
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET 1.1.ActiveCfg = Debug|x64
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET 1.1 (Mono Libraries).ActiveCfg = Debug|x64
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET 2.0.ActiveCfg = Debug|Any CPU
-		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET 2.0.Build.0 = Debug|Any CPU
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET 2.0 (Mono Libraries).ActiveCfg = Debug|x64
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET CF 1.0 (Pocket PC 2003).ActiveCfg = Debug|x64
 		{DC3517FF-AC26-4755-9B7A-EF658FF69593}.Debug|.NET CF 1.0 (Smartphone 2003).ActiveCfg = Debug|x64
